Fix overflow

--- a/src/components/IconCard/IconCard.scss
+++ b/src/components/IconCard/IconCard.scss
@@ -22,7 +22,6 @@
   &__title {
     display: block;
     height: 32px;
-    overflow: hidden;
     color: #BCBBBF;
     margin-top: 14px;
     font-size: 15px;
